fix layout on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
 
 body {
   height: 100vh;
-  min-width: 600px;
+  min-width: 450px;
   background-image: url(https://images2.alphacoders.com/107/1070622.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -320,4 +320,18 @@ a {
   font-size: 1rem;
   text-shadow: 1px 1px 1px black;
   font-weight: 300;
+}
+
+@media (max-width: 600px) {
+  .pkmn-container {
+    width: 450px;
+  }
+
+  .search-container {
+    width: 450px;
+  }
+
+  main {
+    min-width: 450px;
+  }
 }
